<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/commonBg"
    android:orientation="vertical">

    <include layout="@layout/action_bar" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/commonDevide" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/commonWhite"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/rl_member"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="@dimen/layout_size50"
                    android:layout_marginTop="@dimen/layout_size24"
                    android:background="@mipmap/bg_member_none">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_member_time"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/layout_size60"
                            android:gravity="center_horizontal"
                            android:text="充值成为会员"
                            android:textColor="@color/colorBF"
                            android:textSize="@dimen/text22" />

                        <TextView
                            android:id="@+id/tv_username"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/layout_size22"
                            android:gravity="center_horizontal"
                            android:text="名字"
                            android:textColor="@color/mine_money_get"
                            android:textSize="@dimen/text36" />

                    </LinearLayout>

                </RelativeLayout>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/layout_size30"
                android:layout_marginTop="@dimen/layout_size10"
                android:text="@string/common_member"
                android:textColor="@color/color9A"
                android:textSize="@dimen/text26" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_member_options"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_size10"></android.support.v7.widget.RecyclerView>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/layout_size30"
                android:layout_marginTop="@dimen/layout_size20"
                android:text="@string/pay_by"
                android:textColor="@color/color9A"
                android:textSize="@dimen/text26" />


            <LinearLayout
                android:id="@+id/ll_wechatpay"
                android:layout_width="match_parent"
                android:layout_height="@dimen/layout_size100"
                android:layout_marginTop="@dimen/layout_size20"
                android:background="@color/commonWhite"
                android:visibility="gone">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/layout_size30"
                    android:layout_weight="1"
                    android:drawableLeft="@mipmap/weixin_pay"
                    android:drawablePadding="@dimen/layout_size30"
                    android:gravity="center_vertical"
                    android:text="@string/wechat_pay"
                    android:textColor="@color/commonWhite"
                    android:textSize="@dimen/text28" />

                <View
                    android:layout_width="@dimen/layout_size24"
                    android:layout_height="@dimen/layout_size24"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="@dimen/layout_size60"
                    android:background="@drawable/bg_pay_way" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/commonDevide"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/ll_alipay"
                android:layout_width="match_parent"
                android:layout_height="@dimen/layout_size100"
                android:layout_marginTop="@dimen/layout_size20"
                android:background="@color/commonWhite">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/layout_size30"
                    android:layout_weight="1"
                    android:drawableLeft="@mipmap/alipay"
                    android:drawablePadding="@dimen/layout_size30"
                    android:gravity="center_vertical"
                    android:text="@string/ali_pay"
                    android:textColor="@color/color333"
                    android:textSize="@dimen/text28" />

                <View
                    android:layout_width="@dimen/layout_size24"
                    android:layout_height="@dimen/layout_size24"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="@dimen/layout_size60"
                    android:background="@drawable/bg_pay_way" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/layout_size30"
                android:layout_marginTop="@dimen/layout_size8"
                android:text="@string/member_privilege"
                android:textColor="@color/color9A"
                android:textSize="@dimen/text26" />

            <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="@dimen/layout_size190"-->
            <!--android:layout_marginTop="@dimen/layout_size18"-->
            <!--android:background="@color/commonWhite"-->
            <!--android:orientation="horizontal">-->

            <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_gravity="center_vertical"-->
            <!--android:layout_marginLeft="@dimen/layout_size30"-->
            <!--android:drawableLeft="@drawable/icon_member_video_verify"-->
            <!--android:drawablePadding="@dimen/layout_size30"-->
            <!--android:gravity="center"-->
            <!--android:text="@string/privilege_video_verify"-->
            <!--android:textColor="@color/color56"-->
            <!--android:textSize="@dimen/text_size28" />-->


            <!--</LinearLayout>-->

            <!--<View-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="1px"-->
            <!--android:background="@color/commonDevide" />-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/layout_size190"
                android:layout_marginTop="@dimen/layout_size18"
                android:background="@color/commonWhite"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/layout_size30"
                    android:drawableLeft="@mipmap/icon_member_picture"
                    android:drawablePadding="@dimen/layout_size30"
                    android:gravity="center"
                    android:text="@string/privilege_album"
                    android:textColor="@color/color56"
                    android:textSize="@dimen/text28" />


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/commonDevide" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/layout_size190"
                android:background="@color/commonWhite"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/layout_size30"
                    android:drawableLeft="@mipmap/icon_member_video"
                    android:drawablePadding="@dimen/layout_size30"
                    android:gravity="center"
                    android:text="@string/privilege_video"
                    android:textColor="@color/color56"
                    android:textSize="@dimen/text28" />


            </LinearLayout>

            <TextView
                android:id="@+id/tv_pay"
                android:layout_width="@dimen/layout_size440"
                android:layout_height="@dimen/layout_size70"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/layout_size60"
                android:layout_marginTop="@dimen/layout_size60"
                android:background="@drawable/common_red_button"
                android:gravity="center"
                android:text="成为会员"
                android:textColor="@color/commonWhite"
                android:textSize="@dimen/text30" />


        </LinearLayout>
    </ScrollView>
</LinearLayout>