<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/layout_size100"
        android:background="@color/commonBg"></FrameLayout>

    <LinearLayout
        android:id="@+id/ll_tab"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_size100"
        android:layout_alignParentBottom="true"
        android:background="@color/commonWhite"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/rl_home"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/ripple_effect">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/tab_home" />

                <TextView
                    android:id="@+id/tv_home"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="@dimen/layout_size10"
                    android:gravity="center"
                    android:text="@string/tab_home"
                    android:textColor="@color/tab_text_selector"
                    android:textSize="@dimen/text20" />
            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_find"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/ripple_effect">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_find"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/tab_find" />

                <TextView
                    android:id="@+id/tv_find"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="@dimen/layout_size10"
                    android:gravity="center"
                    android:text="@string/tab_find"
                    android:textColor="@color/tab_text_selector"
                    android:textSize="@dimen/text20" />
            </LinearLayout>


        </RelativeLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:visibility="visible" />

        <RelativeLayout
            android:id="@+id/rl_chat"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/ripple_effect">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_chat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/tab_chat" />

                <TextView
                    android:id="@+id/tv_chat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="@dimen/layout_size10"
                    android:gravity="center"
                    android:text="@string/tab_chat"
                    android:textColor="@color/tab_text_selector"
                    android:textSize="@dimen/text20" />
            </LinearLayout>

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/rl_mine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/ripple_effect">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_mine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/tab_mine" />

                <TextView
                    android:id="@+id/tv_mine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="@dimen/layout_size10"
                    android:gravity="center"
                    android:text="@string/tab_mine"
                    android:textColor="@color/tab_text_selector"
                    android:textSize="@dimen/text20" />
            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

    <View
        android:id="@+id/view_bottom"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_alignTop="@id/ll_tab"
        android:background="@color/commonDevide"
        android:visibility="visible" />

    <ImageView
        android:id="@+id/iv_publish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:scaleType="center"
        android:src="@mipmap/icon_publish_selector"
        android:visibility="visible" />

</RelativeLayout>
