<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/commonBg"
    android:orientation="vertical">

    <include layout="@layout/action_bar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/layout_size70"
                android:layout_marginRight="@dimen/layout_size70"
                android:layout_marginTop="@dimen/layout_size94"
                android:background="@drawable/bg_income"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_income_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/layout_size100"
                    android:drawableLeft="@mipmap/icon_income_money"
                    android:drawablePadding="@dimen/layout_size20"
                    android:text=""
                    android:textColor="@color/commonRed"
                    android:textSize="@dimen/text50" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_marginTop="@dimen/layout_size70"
                    android:background="@color/commonDevide" />


                <TextView
                    android:id="@+id/tv_income_money"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/layout_size70"
                    android:text=""
                    android:textColor="@color/income_money"
                    android:textSize="@dimen/text50" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/layout_size20"
                    android:text="@string/money_available"
                    android:textColor="@color/color333"
                    android:textSize="@dimen/text30" />


                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_marginTop="@dimen/layout_size70"
                    android:background="@color/commonDevide" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/layout_size30"
                    android:text="@string/to_alipay"
                    android:textColor="@color/color9A"
                    android:textSize="@dimen/text22" />

                <TextView
                    android:id="@+id/tv_alipay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/layout_size20"
                    android:text=""
                    android:textColor="@color/commonRed"
                    android:textSize="@dimen/text26" />

                <TextView
                    android:id="@+id/tv_submit"
                    android:layout_width="@dimen/layout_size440"
                    android:layout_height="@dimen/layout_size70"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="@dimen/layout_size60"
                    android:layout_marginTop="@dimen/layout_size40"
                    android:background="@drawable/common_red_button"
                    android:gravity="center"
                    android:text="提交"
                    android:textColor="@color/commonWhite"
                    android:textSize="@dimen/text30" />

            </LinearLayout>


            <TextView
                android:id="@+id/tv_prompt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/layout_size70"
                android:layout_marginRight="@dimen/layout_size70"
                android:layout_marginTop="@dimen/layout_size20"
                android:text="@string/income_prompt"
                android:textColor="@color/color9A"
                android:textSize="@dimen/text22" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>